--- a/src/main/res/layout/activity_presenter_home.xml
+++ b/src/main/res/layout/activity_presenter_home.xml
@@ -33,11 +33,12 @@
                 android:id="@+id/text_welcome_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Welcome, Presenter!"
-                android:textSize="18sp"
-                android:textColor="@color/gray_700"
+                android:gravity="center"
                 android:layout_marginBottom="24dp"
-                android:gravity="center" />
+                android:text="@string/presenter_home_welcome_default"
+                android:textColor="@color/gray_700"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,9 +47,9 @@
 
                 <include layout="@layout/card_presenter_action_start_session" />
 
-                <include layout="@layout/card_presenter_action_create_instance" />
+                <include layout="@layout/card_presenter_action_enroll_slot" />
 
-                <include layout="@layout/card_presenter_action_create_seminar" />
+                <include layout="@layout/card_presenter_action_my_slot" />
 
             </LinearLayout>
 
