--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -14,4 +14,25 @@
         <item name="android:textColor">@color/gray_900</item>
     </style>
 
+    <style name="SemScanButtonPrimary" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/primary_blue</item>
+    </style>
+
+    <style name="SemScanButtonOutlinedPrimary" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/primary_blue</item>
+        <item name="strokeColor">@color/primary_blue</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
+
+    <style name="SemScanInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundMode">outline</item>
+        <item name="boxStrokeColor">@color/primary_blue</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeWidthFocused">2dp</item>
+        <item name="hintTextColor">@color/gray_600</item>
+    </style>
+
 </resources>
